name:                blog
version:             0.1.0.0
synopsis:            My blog
description:         Please see README.md
homepage:            http://github.com/rohanorton/blog#readme
license:             BSD3
license-file:        LICENSE
author:              Rohan Orton
maintainer:          rohan.orton@gmail.com
copyright:           2016 Rohan Orton
build-type:          Simple
cabal-version:       >= 1.10

executable site
  main-is:           site.hs
  build-depends:     base == 4.*
                   , hakyll == 4.7.*
  ghc-options:       -threaded
  default-language:  Haskell2010
source-repository head
  type:     git
  location: https://github.com/rohanorton/blog
